# DDA_Intro

./: .gitignore  DDAfunctions.jl  EDF_SUPPORT.md  MinError.jl  StructureSelection.jl  dda_functions.py  edf_to_ascii.py  plot_dda_results.py  run_first_DDA.jl  run_first_DDA.py  write_ROS_edf.jl
py/: dda_ct.py  dda_de.py  dda_functions.py  dda_output_converter.py  dda_st.py  generate_data.py  min_error.py  run_first_DDA.py  structure_selection.py  test_converter.py  test_dda.py  test_dda_accuracy.py
rs/: Cargo.toml  README.md
rs/src/: dda_ct.rs  dda_de.rs  dda_functions.rs  dda_st.rs  generate_data.rs  lib.rs  main.rs
