[package]
name = "dda"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.16"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
itertools = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
